--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.7",
     "@expressive-code/plugin-line-numbers": "^0.41.3",
     "astro": "^5.13.4",
     "astro-expressive-code": "^0.41.3",
